--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -162,9 +162,11 @@ p {
         margin-top: 20px; } }
 
 #navigation_bar {
+  visibility: hidden;
   display: none;
   position: fixed;
   width: 100%;
+  height: 0;
   background: #32436e;
   color: #eeeeee;
   font-family: "Merriweather", serif; }
@@ -240,7 +242,9 @@ p {
       width: 20px; } }
 
 #navigation_bar.show {
-  display: block; }
+  visibility: visible;
+  display: block;
+  height: 48px; }
 
 #plays_index {
   background: #3a96b7;
