--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -244,7 +244,12 @@ p {
 #navigation_bar.show {
   visibility: visible;
   display: block;
-  height: 48px; }
+  height: 60px; }
+  @media screen and (min-width: 0px) and (max-width: 640px) {
+    #navigation_bar.show {
+      height: 48px;
+      visibility: visible;
+      display: block; } }
 
 #plays_index {
   background: #3a96b7;
