--- a/assets/sass/styles.css.scss
+++ b/assets/sass/styles.css.scss
@@ -26,6 +26,10 @@ body {
   line-height: 28px;
 }
 
+body#techfar_landing_page {
+  background: $atlantic_blue;
+}
+
 a {
   color: inherit;
   font-family: inherit;
