Making background white

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,7 +4,7 @@
   box-sizing: border-box; }
 
 body {
-  background: #eae4d2;
+  background: #ffffff;
   font-family: "Merriweather", serif;
   margin: 0;
   line-height: 28px; }
