updated techfar landing page with links to the binaries

--- a/_layouts/techfar.html
+++ b/_layouts/techfar.html
@@ -33,6 +33,9 @@ title: 'This is my Site Title'
       <div class="button">
         <a href="http://www.github.com/whitehouse/playbook" title="Link to Comments and Discussion">SUBMIT COMMENTS</a>
       </div>
+
+      <p class="download_links">You can also <a href="https://github.com/WhiteHouse/playbook/raw/gh-pages/assets/TechFAR%20Handbook%208%207%2014.pdf" title="Link to download the TechFAR Handbook as a PDF">download the handbook as a PDF file</a> or <a href="https://github.com/WhiteHouse/playbook/raw/gh-pages/assets/TechFAR%20Handbook%208%207%2014.docx" title="Link to Download the TechFAR Handbook as a .docx document">.DOCX document</a></p>
+     
     </div>
   </div>
 </div>
