--- a/_layouts/techfar.html
+++ b/_layouts/techfar.html
@@ -31,7 +31,7 @@ title: 'This is my Site Title'
         <a href="https://github.com/WhiteHouse/playbook/blob/gh-pages/_includes/techfar-online.md" title="Link to View the Handbook">READ THE HANDBOOK</a>
       </div>
       <div class="button">
-        <a href="http://www.github.com/whitehouse/playbook" title="Link to Comments and Discussion">SUBMIT COMMENTS</a>
+        <a href="https://github.com/whitehouse/playbook#readme" title="Link to Comments and Discussion">SUBMIT COMMENTS</a>
       </div>
 
       <p class="download_links">You can also <a href="https://github.com/WhiteHouse/playbook/raw/gh-pages/assets/TechFAR%20Handbook%208%207%2014.pdf" title="Link to download the TechFAR Handbook as a PDF">download the handbook as a PDF file</a> or <a href="https://github.com/WhiteHouse/playbook/raw/gh-pages/assets/TechFAR%20Handbook%208%207%2014.docx" title="Link to Download the TechFAR Handbook as a .docx document">.DOCX document</a></p>
