--- a/assets/sass/styles.css.scss
+++ b/assets/sass/styles.css.scss
@@ -8,7 +8,7 @@ $miami_vice_blue:     #3A96B7;
 $white:               #eee;
 $black:               #333;
 $gray:                #4D4D4D;
-$background_white:    #EAE4D2;
+$background_white:    #fff;
 
 // Fonts
 $serif:               'Merriweather', serif;
