--- a/assets/sass/styles.css.scss
+++ b/assets/sass/styles.css.scss
@@ -2,9 +2,9 @@
 @import "neat/neat";
 
 // Colors
-$atlantic_blue:       #32436E;
+$atlantic_blue:       #36495A;
 $pacific_blue:        #1164B0;
-$miami_vice_blue:     #3A96B7;
+$miami_vice_blue:     #2B99E8;
 $white:               #eee;
 $black:               #333;
 $gray:                #4D4D4D;
