--- a/assets/sass/styles.css.scss
+++ b/assets/sass/styles.css.scss
@@ -2,13 +2,13 @@
 @import "neat/neat";
 
 // Colors
-$atlantic_blue:       #32436E;
+$atlantic_blue:       #36495a;
 $pacific_blue:        #1164B0;
 $miami_vice_blue:     #3A96B7;
-$white:               #eee;
+$white:               #fff;
 $black:               #333;
 $gray:                #4D4D4D;
-$background_white:    #EAE4D2;
+$background_white:    #fff;
 
 // Fonts
 $serif:               'Merriweather', serif;
