--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,7 +10,7 @@ body {
   line-height: 28px; }
 
 body#techfar_landing_page {
-  background: #36495a; }
+  background: #36435a; }
 
 a {
   color: inherit;
@@ -133,7 +133,7 @@ p {
     text-align: center; }
   .button a:hover {
     background: white;
-    color: #36495a;
+    color: #36435a;
     text-decoration: none; }
   @media screen and (min-width: 0px) and (max-width: 640px) {
     .button {
@@ -150,14 +150,14 @@ p {
   font-family: "Open Sans", sans-serif; }
 
 #introduction {
-  background: #36495a;
+  background: #36435a;
   color: white;
   padding-bottom: 60px; }
   #introduction a {
     text-decoration: underline; }
   #introduction a:hover {
     background: white;
-    color: #36495a; }
+    color: #36435a; }
   #introduction .button a {
     text-decoration: none; }
   #introduction p {
@@ -184,7 +184,7 @@ p {
   position: fixed;
   width: 100%;
   height: 0;
-  background: #36495a;
+  background: #36435a;
   color: white;
   font-family: "Merriweather", serif; }
   #navigation_bar .outer_container {
@@ -221,7 +221,7 @@ p {
       font-family: "Merriweather", serif;
       font-weight: lighter;
       color: white;
-      border: 1px solid #1164b0; }
+      border: 1px solid #3a96b7; }
     #navigation_bar li a:hover {
       background: #3a96b7;
       color: white;
@@ -340,7 +340,7 @@ p {
     margin-right: 0; }
 #plays h4, #techfar h4 {
   margin-top: 0px;
-  color: #36495a; }
+  color: #36435a; }
 #plays h2, #techfar h2 {
   margin-bottom: 24px; }
 #plays h5, #techfar h5 {
@@ -371,12 +371,12 @@ p {
 #plays ul, #techfar ul {
   list-style-image: url("../images/bullet-circle.svg"); }
 #plays a, #techfar a {
-  color: #36495a;
+  color: #36435a;
   text-decoration: underline;
   display: inline-block; }
 #plays a:hover, #techfar a:hover {
   color: white;
-  background: #36495a; }
+  background: #36435a; }
 @media screen and (min-width: 0px) and (max-width: 640px) {
   #plays p, #techfar p {
     font-size: 16px;
