--- a/assets/sass/styles.css.scss
+++ b/assets/sass/styles.css.scss
@@ -2,8 +2,8 @@
 @import "neat/neat";
 
 // Colors
-$atlantic_blue:       #36495a;
-$pacific_blue:        #1164B0;
+$atlantic_blue:       #36435a;
+$pacific_blue:        #3A96B7;
 $miami_vice_blue:     #3A96B7;
 $white:               #fff;
 $black:               #333;
