--- a/_layouts/techfar.html
+++ b/_layouts/techfar.html
@@ -45,3 +45,4 @@ title: 'This is my Site Title'
 <script src='{{site.baseurl}}/assets/js/site.js'></script>
 <script id="_fed_an_js_tag" type="text/javascript" src="{{site.baseurl}}/assets/js/federated-analytics.all.min.js?agency=GSA&sub-agency=OGP"></script>
 </body>
+</html>
