--- a/assets/sass/styles.css.scss
+++ b/assets/sass/styles.css.scss
@@ -245,7 +245,7 @@ p {
     list-style-position: outside;
   }
 
-  .active_play {
+  .active {
     a {
       background: $miami_vice_blue;
       color: $white;
