--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,12 +6,12 @@
 @media screen {
   body {
     background: white;
-    font-family: "Merriweather", Georgia, serif;
+    font-family: "Open Sans", sans-serif;
     margin: 0;
     line-height: 28px; }
 
   body#techfar_landing_page {
-    background: #36435a; }
+    background: #00cc99; }
 
   a {
     color: inherit;
@@ -33,7 +33,7 @@
     list-style-position: inside; }
     ol li, ul li {
       margin: 1em 0;
-      color: #333333; }
+      color: #00cc99; }
 
   h1 {
     font-size: 50px;
@@ -49,7 +49,7 @@
 
 @media screen {
   h2 {
-    font-family: "Merriweather", Georgia, serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 54px;
     line-height: 65px;
     font-weight: 300;
@@ -66,9 +66,9 @@
     font-size: 18px; }
 
   h4 {
-    font-family: "Merriweather", Georgia, serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 18px;
-    color: #3a96b7;
+    color: #d9d9d9;
     margin-bottom: 0; }
 
   h5 {
@@ -133,12 +133,12 @@
       display: inline-block;
       padding: 10px 30px;
       text-decoration: none;
-      border: 1px solid white;
+      border: 1px solid #00cc99;
       min-width: 172px;
       text-align: center; }
     .button a:hover {
-      background: white;
-      color: #36435a;
+      background: #00cc99;
+      color: #00cc99;
       text-decoration: none; } }
   @media screen and (min-width: 0px) and (max-width: 640px) {
     .button {
@@ -162,8 +162,8 @@
     #introduction a {
       text-decoration: underline; }
     #introduction a:hover {
-      background: white;
-      color: #36435a; }
+      background: #00cc99;
+      color: #474747; }
     #introduction .button a {
       text-decoration: none; }
     #introduction p {
@@ -193,7 +193,7 @@
     height: 0;
     background: #474747;
     color: white;
-    font-family: "Merriweather", Georgia, serif; }
+    font-family: "Open Sans", sans-serif; }
     #navigation_bar .outer_container {
       padding: 0 40px; }
     #navigation_bar h4 {
@@ -212,7 +212,7 @@
       padding: 0;
       list-style-position: outside; }
     #navigation_bar .active a {
-      background: #3a96b7;
+      background: #00cc99;
       color: white;
       text-decoration: none; }
     #navigation_bar li {
@@ -225,12 +225,12 @@
         width: 24px;
         line-height: 22px;
         text-align: center;
-        font-family: "Merriweather", Georgia, serif;
+        font-family: "Open Sans", sans-serif;
         font-weight: lighter;
         color: white;
-        border: 1px solid #3a96b7; }
+        border: 1px solid #00cc99; }
       #navigation_bar li a:hover {
-        background: #3a96b7;
+        background: #00cc99;
         color: white;
         text-decoration: none; }
     #navigation_bar #menu_icon {
@@ -278,7 +278,7 @@
 
 @media screen {
   #plays_index {
-    background: #3a96b7;
+    background: #00cc99;
     color: #333333;
     padding-bottom: 60px; }
     #plays_index h3 {
@@ -350,7 +350,7 @@
       margin-right: 0; }
   #plays h4, #techfar h4 {
     margin-top: 0px;
-    color: #36435a; }
+    color: #00cc99; }
   #plays h2, #techfar h2 {
     margin-bottom: 24px; }
   #plays h5, #techfar h5 {
@@ -381,12 +381,12 @@
   #plays ul, #techfar ul {
     list-style-image: url("../images/bullet-circle.svg"); }
   #plays a, #techfar a {
-    color: #36435a;
+    color: white;
     text-decoration: underline;
     display: inline-block; }
   #plays a:hover, #techfar a:hover {
     color: white;
-    background: #36435a; } }
+    background: #00cc99; } }
 @media screen and (min-width: 0px) and (max-width: 640px) {
   #plays p, #techfar p {
     font-size: 16px;
@@ -429,7 +429,7 @@
 @media print {
   body {
     background: white;
-    font-family: "Merriweather", Georgia, serif;
+    font-family: "Open Sans", sans-serif;
     font-weight: lighter;
     line-height: 1.5em;
     font-size: 12px;
